<resources>
    <string name="app_name">Racket Selector</string>

    <!--BLE Screens -->
    <string name="connect_to_ble">Se connecter au Bluetooth</string>

    <!-- Form Screen -->
    <string name="welcome">Bienvenue !</string>
    <string name="enter_name">Veuillez saisir votre prénom :</string>
    <string name="name">Prénom</string>
    <string name="enter_age">Veuillez saisir votre âge :</string>
    <string name="age">Age</string>
    <string name="are_you">Etes-vous…</string>
    <string name="male">Un homme</string>
    <string name="female">Une femme</string>
    <string name="other">Autre</string>
    <string name="enter_height">Veuillez saisir votre taille en cm :</string>
    <string name="height">Taille</string>
    <string name="enter_weight">Veuillez saisir votre poids en kg :</string>
    <string name="weight">Poids</string>
    <string name="left_handed">Gaucher</string>
    <string name="right_handed">Droitier</string>
    <string name="validate">Valider</string>

    <string name="form_incomplete">Veuillez compléter tous les champs avant de valider</string>

    <!-- Stroke Typology Screen -->
    <string name="stroke_typology_to_test">Quel type de coup souhaitez-vous analyser ?</string>
    <string name="forehand_stroke">Coup droit</string>
    <string name="backhand_stroke">Revers</string>
    <string name="serve">Service</string>
    <string name="volley">Volée</string>
    <string name="smash">Smash</string>

    <string name="start">Commencer</string>

    <string name="stroke_selection_incomplete">Veuillez choisir un type de coup à analyser</string>

    <!-- Countdown Screen -->
    <string name="go">C\'est parti !</string>

    <!-- Strokes In Progress Screen -->
    <string name="finish">Terminer</string>
    <string name="in_progress">Session de %s en cours…</string>

    <!-- Recap Screen -->
    <string name="hello_user">Bonjour %s !</string>
    <string name="statistics_available">Les statistiques de votre session sont désormais disponibles</string>
    <string name="go_to_statistics">Accéder à vos statistiques</string>

    <!-- Statistics Screen -->
    <string name="your_statistics">Vos statistiques</string>
    <string name="time">Temps (ms)</string>
    <string name="prehension_max">Force de préhension maximale (kg)</string>
    <string name="prehension_value">19.5</string>
    <string name="speed_max">Vitesse maximale (km/h)</string>
    <string name="speed_value">84</string>
    <string name="spin_on_touch">Plan de frappe (°)</string>
    <string name="spin_value">48</string>
    <string name="prehension_chart">Force de préhension en kg en fonction du temps</string>
    <string name="speed_chart">Vitesse de la raquette en km/h en fonction du temps</string>
    <string name="stroke_zone">Zone de frappes</string>
    <string name="stroke_plan">Plans de frappes</string>

    <!-- Generic Strings -->
    <string name="image">image</string>
    <string name="text">texte</string>
    <string name="play" />
    <string name="ble_device_status_connecting" />
    <string name="ble_device_connected"> Connecté </string>
    <string name="ble_device_disconnected" />
    <string name="ble_device_status_disconnecting" />
    <string name="ble_scan_error" />
    <string name="ble_scan_pause" />
    <string name="ble_scan_play" />

</resources>